added TimelineData, added name, userPhotoId, switched to new Timeline getting for client side

--- a/war/index.html
+++ b/war/index.html
@@ -264,9 +264,9 @@
                 <div class="socials_block">
                 	<ul>
                     	
-                        <li><a href="#" title="twitter" class="twitter">twitter</a></li>
+                        <li><a href="https://twitter.com/search?q=%23deedle" title="twitter" class="twitter">twitter</a></li>
                         
-                        <li><a href="#" title="email" class="email">email</a></li>
+                        <li><a href="https://plus.google.com/106990508535507040808/posts" title="google plus" class="email"></a></li>
                     </ul>
                     <div class="clear"></div>
                 </div>
