tested GET PHOTO_URL, see comments for further implementing

--- a/war/index.html
+++ b/war/index.html
@@ -94,7 +94,7 @@
             <div class="wrap page_full sort_portfolio">
                 <div class="container12">
                 	
-                    <h2>Your timeline</h2>                    
+                    <h2>Timeline</h2>                    
                     <div class="post_1col_full">
                         <div id="container_block">
                             <div class="element art" data-category="art">  
