--- a/war/index.html
+++ b/war/index.html
@@ -61,27 +61,27 @@
             	<!-- welcome -->
                 <div class="wrap welcome">
                 	<div class="one_fourth">
-                    	<h1>How we work</h1>
+                    	<h1>In Progress</h1>
                         <img src="images/img1.png" width="63" height="63" alt="" />
-                        <p>Donec sit amet erosin. Lorem ipsum dolor sit amet, consec tetuerio adipiscing elit. Mauris adipiscing elit. Mauris fermentu libo dictum magna. Sed laoreet aliqunis uam leo ut tellus. <a href="#" class="read"><span>Read More</span></a></p>
+                        <p>Donec sit amet erosin. Lorem ipsum dolor sit amet, consec tetuerio adipiscing elit. Mauris adipiscing elit. Mauris fermentu libo dictum magna. Sed laoreet aliqunis uam leo ut tellus. </p>
                         <div class="clear"></div>
                     </div>
                     <div class="one_fourth">
-                    	<h1>Our services</h1>
+                    	<h1>In Progress</h1>
                         <img src="images/img2.png" width="63" height="63" alt="" />
-                        <p>Mauris fermentum delat dictum magna. Sed ete laoreet aliquam leo. Da tellus dolor, dapibus it. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante. <a href="#" class="read"><span>Read More</span></a></p>
+                        <p>Mauris fermentum delat dictum magna. Sed ete laoreet aliquam leo. Da tellus dolor, dapibus it. Aenean auctor wisi et urna. Aliquam erat volutpat. Duis ac turpis. Integer rutrum ante.</p>
                         <div class="clear"></div>
                     </div>
                     <div class="one_fourth">
-                    	<h1>Featured  apps</h1>
+                    	<h1>In Progress</h1>
                         <img src="images/img3.png" width="63" height="63" alt="" />
-                        <p>Aenean auctor wisi et urna. Aliquam eratino volutpat. Duis acumile turpis. Integer rutrum rutrum ante eu lacus.Vestibulumin libero nisl, porta vel, scelerisque at eget, malesuada. <a href="#" class="read"><span>Read More</span></a></p>
+                        <p>Aenean auctor wisi et urna. Aliquam eratino volutpat. Duis acumile turpis. Integer rutrum rutrum ante eu lacus.Vestibulumin libero nisl, porta vel, scelerisque at eget, malesuada. </p>
                         <div class="clear"></div>
                     </div>
                     <div class="one_fourth">
-                    	<h1>Dedicated team</h1>
+                    	<h1>In Progress</h1>
                         <img src="images/img4.png" width="63" height="63" alt="" />
-                        <p>Vestibulum libero nislas porta vel, scelerisqu de eget, malesuada at, sit neque. Vivamus egeter dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. <a href="#" class="read"><span>Read More</span></a></p>
+                        <p>Vestibulum libero nislas porta vel, scelerisqu de eget, malesuada at, sit neque. Vivamus egeter dapibus eget, elementum vel, cursus eleifend, elit. Aenean auctor wisi et urna. </p>
                         <div class="clear"></div>
                     </div>
                     <div class="clear"></div>
