--- a/war/index.html
+++ b/war/index.html
@@ -246,7 +246,7 @@
                 </div>
                     <div class="two_third">
                         <div class="video_wrapper">
-                            <iframe width="600" height="335" src="http://www.youtube.com/embed/16_FtvrS-yk" frameborder="0" allowfullscreen></iframe>
+                            <iframe width="600" height="335" src="http://www.youtube.com/embed/16_FtvrS-yk?rel=0" frameborder="0" allowfullscreen></iframe>
                         </div>
                     </div>
 
