mainly all on main page

--- a/war/index.html
+++ b/war/index.html
@@ -71,7 +71,7 @@
                     <div class="one_fourth">
                     	<h1>No Passwords</h1>
                         <img src="images/img2.png" width="63" height="63" alt="" />
-						<p>No more boring registration. We already know about what we need.</p>
+						<p>No more boring registration. We already know about you what we need.</p>
                         <div class="clear"></div>
                     </div>
                     <div class="one_fourth">
@@ -128,9 +128,12 @@
         	<div class="wrap">
             	<div class="one_third">
                 	<h2>Shortly About Us</h2>
-                    <p>Aliquam erat volutpat. Duis ac turpis. Integer das rutrum ante eu lacus. Vestibulum libero nisl, porta vel, scelerisque eget, malesuada at, neque. Vivm eget nibh. Etiam cursus leo vel metus.</p>
-                    <p>Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultricesiru. Suspendisse sollicitudin velit sed leo.</p>
-                    <p>Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultricesiru. Suspendisse sollicitudin velit sed leo.</p>
+                    <p>Deedle created by three students from Lviv, Ukraine.</p>
+                    <p>First, the idea came to Bogdan Tsap, when he knew about GADC from GDG Lviv. He shared the idea with Dmytro Danylyk. Soon, Eugene Shykiriavyi, the third member, have joined the team.</p>
+                    <p>Deedle uses redistributed storage from users Google Drive accounts and other services like App Engine, Maps, OAuth and more.</p>
+<!--                     <p>Aliquam erat volutpat. Duis ac turpis. Integer das rutrum ante eu lacus. Vestibulum libero nisl, porta vel, scelerisque eget, malesuada at, neque. Vivm eget nibh. Etiam cursus leo vel metus.</p> -->
+<!--                     <p>Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultricesiru. Suspendisse sollicitudin velit sed leo.</p> -->
+<!--                     <p>Nulla facilisi. Aenean nec eros. Vestibulum ante ipsum primis in faucibus orci luctus et ultricesiru. Suspendisse sollicitudin velit sed leo.</p> -->
                 </div>
                     <div class="two_third">
                         <div class="video_wrapper">
