--- a/war/index.html
+++ b/war/index.html
@@ -43,13 +43,13 @@
                         <img src="images/cycle_content_slider/slide1.png" width="600" height="509" class="bigImage" alt="" />	
                         <div class="slider_title">Make it deedle</div>
 						<p>There is no apps that would allow people to share their doings. Deedle aims to change that. The idea is to help people share and show things they have done. </p>
-                        <a href="#" class="download_btn"><span></span></a>						
+                        <a href="https://play.google.com/store/apps/details?id=com.deedle" class="download_btn"><span></span></a>						
                     </div>
                     <div class="oneByOne_item" style="display:none;">                                 	
                        <img src="images/cycle_content_slider/slide2.png" width="600" height="509" class="bigImage" alt="" />	
                        <div class="slider_title">Do it</div>
 						 <p>Imagine you just saved a cat or planted a tree, take a picture and write a short story about your deed. Here you can check what people think about your deed, if they like it or not. It will be immediately available in our application public timeline.</p>
-                        <a href="#" class="download_btn"><span></span></a>                                             
+                        <a href="https://play.google.com/store/apps/details?id=com.deedle" class="download_btn"><span></span></a>                                             
                     </div>	       
                 </div>
             </div>
